# stock-surge

./: .env.example  .gitignore  API_COMPLETE.md  CHANGELOG.md  CHATBOT_IMPLEMENTATION.md  COMPONENT_STRUCTURE.md  DEMO_PROMPTS.md  IMPLEMENTATION_SUMMARY.md  INDUSTRY_PIE_CHART_IMPLEMENTATION.md  OLLAMA_INTEGRATION_SUMMARY.md  OLLAMA_QUICKSTART.md  PIE_CHART_IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  REDDIT_QUICK_START.md  SCHWAB_API_SETUP.md  SCHWAB_IMPLEMENTATION_SUMMARY.md  SCHWAB_QUICK_START.md  SETUP_INSTRUCTIONS.md  TECHNICAL_INDICATORS_CHAT.md  TECHNICAL_INDICATORS_IMPLEMENTATION.md  TESTING_GUIDE.md  auth.py  get_refresh_token.py  get_token.py  main.py.old  models.py  pyproject.toml  reddit_tracker.py  start-backend.sh  test_new_endpoints.py  yfinance_test.ipynb
backend/: start-backend.sh  test_ollama.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/ai/: __init__.py  ollama_service.py  routes.py
backend/app/auth/: auth.py  routes.py  schemas.py
backend/app/chat/: __init__.py  context_provider.py  routes.py  schemas.py  service.py
backend/tests/: test_reddit_tracker.py
docs/: AI_FEATURES.md  OLLAMA_SETUP.md  README.md  RUN.md  TROUBLESHOOTING.md
docs/api/: endpoints.md  sector-industry.md
docs/archive/: backend-complete.md  implementation-summary.md  premium-features-plan.md  reddit-feature-complete.md
docs/features/: industry-visualization.md  reddit-implementation.md  reddit-setup.md
frontend/: FRONTEND_FIXED.md  package-lock.json  package.json  start-frontend.sh
frontend/src/: App.tsx  index.css  router.tsx
(+91 files in other folders)
