[project]
name = "stock-surge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "email-validator>=2.3.0",
    "fastapi>=0.128.1",
    "httpx>=0.28.1",
    "lxml>=5.0.0",
    "ollama>=0.6.1",
    "pandas>=3.0.0",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.49.0",
    "praw>=7.8.1",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.1.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.46",
    "textblob>=0.19.0",
    "uvicorn>=0.40.0",
    "vadersentiment>=3.3.2",
    "websockets>=16.0",
    "yfinance>=1.1.0",
]
